--- a/15_game/15_game/index.html
+++ b/15_game/15_game/index.html
@@ -20,7 +20,6 @@
   <script>
       window.onload=conn;
 
-      //执行游戏
       runGame(GAME_LEVELS, DOMDisplay);
       //执行游戏
 
@@ -38,6 +37,17 @@
           conn.close();
           conn = null;
       }
+      var roc = roc || {};
+roc.db = roc.db ||{};
+//创建一个连接
+roc.db.createDb = function(){
+  var conn = new ActiveXObject("ADODB.Connection"), 
+    fso = new ActiveXObject("Scripting.FileSystemObject"),
+    connstr = "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=" + fso.GetFile("./db/Sigma.mdb");
+  conn.Open(connstr);//打开数据库 
+  roc.db.conn = conn;
+  return roc.db.conn;
+};
       */
       //连接access数据库
 
@@ -47,7 +57,6 @@
       //var db_bbs;
       //db_bbs="AppDomain.CurrentDomain.BaseDirectory//PlatformGame.mdb";//定义数据库
       var conn = new ActiveXObject("ADODB.Connection");
-      //conn.Open("Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|DB//PlatformGame.mdb");
       conn.Open("DBQ=F://soft//aaa.mdb;DRIVER={Microsoft Access Driver (*.mdb)};");
       var rs = new ActiveXObject("ADODB.Recordset");
       var sql="select * from user";
@@ -55,6 +64,7 @@
       var html="";
       while(!rs.EOF)
       {
+          alert(rs(1));
           html=html+rs.Fields("ID")+" "+rs.Fields("userid");
           rs.moveNext();
       }
