--- a/15_game/15_game/sign_up.html
+++ b/15_game/15_game/sign_up.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>log-in</title>
+    <title>sign-up</title>
     <link rel="stylesheet" href="css/common_form.css">
 <script type="text/javascript" src="jquery-3.1.1.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
 	$('#aa').submit(function(){
+	var name = $('#userid').val();
+    var pwd = $('#pwd').val();
 	if($('#userid').val() == "")
 	{
 		alert("请输入用户名");
@@ -15,7 +17,6 @@ $(document).ready(function(){
 		$('#userid').css("background-color","red");	
 		return false;
 	}
-		
 	if($('#pwd').val() == "")
 	{
 		alert("请输入密码");
@@ -23,10 +24,12 @@ $(document).ready(function(){
 		$('#pwd').css("background-color","red");	
 		return false;
 	}
+	var name = $("#userid").val();
+    var pwd = $('#pwd').val();
     return true;
 	});
+	document.getElementById("aa").action="sign_yanz.htm?userid="+name+"&pwd="+pwd;
 });
-
 </script>
 </head>
 <body>
@@ -34,25 +37,26 @@ $(document).ready(function(){
         <div class="header-line"></div>
     </header>
     <div class="content">
-        <h1 class="content-title">登录</h1>
+        <h1 class="content-title">创建账户</h1>
         <div class="content-form">
-            <form id="aa" action="index.html" method="post">
+            <form id="aa" method="post">
                 <div id="change_margin_1">账号
-                    <input id="userid" class="user" type="text" name="user">
+                    <input id="userid" class="user" type="text">
                 </div>
                 <!-- input的value为空时弹出提醒 -->
                 <p id="remind_1"></p>
                 <div id="change_margin_2">密码
-                    <input id="pwd" class="password" type="password" name="password">
+                    <input id="pwd" class="password" type="password">
                 </div>
                 <!-- input的value为空时弹出提醒 -->
                 <p id="remind_2"></p>
                 <div id="change_margin_3">
-                    <input class="content-form-signup" type="submit" value="登录">
+                    <input class="content-form-signup" type="submit" value="创建账户">
                 </div>
             </form>
         </div>
+        <div class="content-login-description">已经拥有账户？</div>
+        <div><a class="content-login-link" href="login.html">登录</a></div>
     </div>
-
 </body>
 </html>
