--- a/15_game/15_game/login.html
+++ b/15_game/15_game/login.html
@@ -15,7 +15,6 @@ $(document).ready(function(){
 		$('#userid').css("background-color","red");	
 		return false;
 	}
-		
 	if($('#pwd').val() == "")
 	{
 		alert("请输入密码");
@@ -23,10 +22,36 @@ $(document).ready(function(){
 		$('#pwd').css("background-color","red");	
 		return false;
 	}
-    return true;
+	var name = $('#userid').val();
+    var pwd = $('#pwd').val();
+	var conn = new ActiveXObject("ADODB.Connection");
+    conn.Open("DBQ=F://soft//aaa.mdb;DRIVER={Microsoft Access Driver (*.mdb)};");
+    var rs = new ActiveXObject("ADODB.Recordset");
+    var sql="select * from users";
+    rs.open(sql, conn);
+	while(!rs.EOF) 
+	{ 
+	 if(rs.Fields("userid")== name)
+	 {
+		 if(rs.Fields("pwd")== pwd)
+		 {
+		 return true;
+		 }
+	  document.getElementById("remind_2").innerHTML = "密码错误！";
+      document.getElementById("change_margin_2").style.marginTop = 1 + "px";
+	 return false;
+	 }
+	 rs.moveNext();
+	 } 
+	  document.getElementById("remind_1").innerHTML = "账号不存在！";
+      document.getElementById("change_margin_1").style.marginTop = 1 + "px";
+	  rs.close(); 
+	  rs = null; 
+	  conn.close(); 
+	  conn = null;
+      return false;
 	});
 });
-
 </script>
 </head>
 <body>
@@ -37,13 +62,13 @@ $(document).ready(function(){
         <h1 class="content-title">登录</h1>
         <div class="content-form">
             <form id="aa" action="index.html" method="post">
-                <div id="change_margin_1">账号
-                    <input id="userid" class="user" type="text" name="user">
+                 <div id="change_margin_1">
+                    <input id="userid" class="user" type="text" name="user" placeholder="请输入用户名" onblur="oBlur_1()" onfocus="oFocus_1()">
                 </div>
                 <!-- input的value为空时弹出提醒 -->
                 <p id="remind_1"></p>
-                <div id="change_margin_2">密码
-                    <input id="pwd" class="password" type="password" name="password">
+                <div id="change_margin_2">
+                    <input id="pwd" class="password" type="password" name="password" placeholder="请输入密码" onblur="oBlur_2()" onfocus="oFocus_2()">
                 </div>
                 <!-- input的value为空时弹出提醒 -->
                 <p id="remind_2"></p>
