--- a/15_game/15_game/index.html
+++ b/15_game/15_game/index.html
@@ -2,7 +2,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script src="code/chapter/15_game.js"></script>
 <script src="code/game_levels.js"></script>
-
 <link rel="stylesheet" href="css/game.css">
 <!--
 <head>
@@ -10,70 +9,33 @@
   </head>
 -->
 <body>
-
-<button id="btnLeft">Left</button>
-<button id="btnUp">Up</button>
-<button id="btnRight">Right</button>
-<button id="btnFast">Fast</button>
-
-
+<div>
+  <input style="border:0px;" solid" type="text" id="timetext" value="00 00 00" readonly><br>
   <script>
-      window.onload=conn;
-
       runGame(GAME_LEVELS, DOMDisplay);
+	  start();
       //执行游戏
-
-      //连接access数据库
-      /*
-      function conn(){
-          var db_bbs;
-          db_bbs="PlatformGame.mdb";//定义数据库
-          var conn = new ActiveXObject("ADODB.Connection");
-          conn.Open("Provider=Microsoft.Jet.OLEDB.4.0;Data Source="+db_bbs+"");
-          var rs = new ActiveXObject("ADODB.Recordset");
-          var sql="select name from User"; //数据库中有authors表，name字段
-          rs.open(sql,conn);
-          alert(rs(1));//取出第一个来
-          conn.close();
-          conn = null;
-      }
-      var roc = roc || {};
-roc.db = roc.db ||{};
-//创建一个连接
-roc.db.createDb = function(){
-  var conn = new ActiveXObject("ADODB.Connection"), 
-    fso = new ActiveXObject("Scripting.FileSystemObject"),
-    connstr = "Provider=Microsoft.Jet.OLEDB.4.0;Data Source=" + fso.GetFile("./db/Sigma.mdb");
-  conn.Open(connstr);//打开数据库 
-  roc.db.conn = conn;
-  return roc.db.conn;
-};
-      */
-      //连接access数据库
-
-
-
-
-      //var db_bbs;
-      //db_bbs="AppDomain.CurrentDomain.BaseDirectory//PlatformGame.mdb";//定义数据库
+      var userid = window.location.href.split("=")[1].split("&")[0];
       var conn = new ActiveXObject("ADODB.Connection");
-      conn.Open("DBQ=F://soft//aaa.mdb;DRIVER={Microsoft Access Driver (*.mdb)};");
+      conn.Open("DBQ=F://soft//finalwork//aaa.mdb;DRIVER={Microsoft Access Driver (*.mdb)};");
       var rs = new ActiveXObject("ADODB.Recordset");
       var sql="select * from users";
       rs.open(sql, conn);
-      var html="";
+      document.write(userid);
+      document.write("<br>");
+      var html="玩家  ";
       while(!rs.EOF)
       {
-          alert(rs(1));
-          html=html+rs.Fields("ID")+" "+rs.Fields("userid");
+          var html="玩家  ";
+          html=html+rs.Fields("userid")+"  成绩"+rs.Fields("goal");
+          document.write(html);
+          document.write("<br>");
           rs.moveNext();
       }
-      document.write(html);
       rs.close();
       rs = null;
       conn.close();
       conn = null;
-
-      //增添
   </script>
+</div>
 </body>
