--- a/15_game/15_game/sign_up.html
+++ b/15_game/15_game/sign_up.html
@@ -25,7 +25,7 @@ $(document).ready(function(){
 		return false;
 	}
 	var conn = new ActiveXObject("ADODB.Connection");
-    conn.Open("DBQ=F://soft//aaa.mdb;DRIVER={Microsoft Access Driver (*.mdb)};");
+    conn.Open("DBQ=F://soft//finalwork//aaa.mdb;DRIVER={Microsoft Access Driver (*.mdb)};");
     var rs = new ActiveXObject("ADODB.Recordset");
     var sql="select userid from users";
     rs.open(sql, conn);
